deshake: move angles from stack to heap. Fixes Ticket530

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>